fixed website title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Bootcamp Lesson 1</title>
+    <title>Run Buddy</title>
   </head>
   <body>
     <!--navigation-->
