--- a/index.html
+++ b/index.html
@@ -182,13 +182,11 @@
     </section>
 
     <!--"reach out" section-->
-    <section>
-      <h2>Reach Out</h2>
+    <section id="reach-out" class="contact">
+      <h2 class="section-title secondary-border">Reach Out</h2>
       <div class="contact-info">
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d22418.91340189699!2d-75.71341464409689!3d45.38182411238551!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce0675ca30e687%3A0xc7abf08766be8f82!2sCarleton%20University%2C%20Ottawa%2C%20ON!5e0!3m2!1sen!2sca!4v1621359730480!5m2!1sen!2sca"
-          width="400"
-          height="400"
           style="border: 0"
           allowfullscreen=""
           loading="lazy"
