add content to hero, replace image

--- a/index.html
+++ b/index.html
@@ -80,6 +80,16 @@
           <button type="submit">Get running!</button>
         </form>
       </div>
+      <div>
+        /
+        <h2>Start Building Habits.</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta
+          mollitia, illo numquam, voluptates fugit voluptate labore, impedit
+          debitis maiores illum et sequi quasi possimus? Ut magni architecto
+          voluptates. Aut, sequi.
+        </p>
+      </div>
     </section>
 
     <!--"what we do" section-->
