--- a/index.html
+++ b/index.html
@@ -94,20 +94,26 @@
 
     <!--"what we do" section-->
     <section id="what-we-do" class="intro">
-      <h2 class="section-title primary-border">What We Do</h2>
-      <p>
-        butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOX
-        Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably
-        haven't heard of them single-origin coffee Vice fanny pack fixie Odd
-        Future Austin fingerstache pickled twee synth Wes Anderson Thundercats
-        viral bitters flannel meggings narwhal Marfa Schlitz sustainable
-        Intelligentsia umami deep v craft
-      </p>
+      <div class="flex-row">
+        <h2 class="section-title primary-border">What We Do</h2>
+      </div>
+      <div class="flex-row">
+        <p>
+          butcher selfies chambray shabby chic gentrify readymade yr Echo Park
+          XOX Tumblr normcore Banksy direct trade Blue Bottle chillwave you
+          probably haven't heard of them single-origin coffee Vice fanny pack
+          fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson
+          Thundercats viral bitters flannel meggings narwhal Marfa Schlitz
+          sustainable Intelligentsia umami deep v craft
+        </p>
+      </div>
     </section>
 
     <!--"what you do" section-->
     <section id="what-you-do" class="steps">
-      <h2 class="section-title secondary-border">What You Do</h2>
+      <div class="flex-row">
+        <h2 class="section-title secondary-border">What You Do</h2>
+      </div>
       <div>
         <!--insert image element-->
         <img src="./assets/images/01-04-svgs/step-1.svg" alt="" />
@@ -139,7 +145,9 @@
 
     <!--"meet the trainers" section-->
     <section id="your-trainers" class="trainers">
-      <h2 class="section-title primary border">Meet The Trainers</h2>
+      <div class="flex-row">
+        <h2 class="section-title primary border">Meet The Trainers</h2>
+      </div>
       <article class="trainer">
         <img
           src="./assets/images/01-05-trainers/trainer-1.jpg"
@@ -193,7 +201,9 @@
 
     <!--"reach out" section-->
     <section id="reach-out" class="contact">
-      <h2 class="section-title secondary-border">Reach Out</h2>
+      <div class="flex-row">
+        <h2 class="section-title secondary-border">Reach Out</h2>
+      </div>
       <div class="contact-info">
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d22418.91340189699!2d-75.71341464409689!3d45.38182411238551!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce0675ca30e687%3A0xc7abf08766be8f82!2sCarleton%20University%2C%20Ottawa%2C%20ON!5e0!3m2!1sen!2sca!4v1621359730480!5m2!1sen!2sca"
