--- a/index.html
+++ b/index.html
@@ -80,8 +80,7 @@
           <button type="submit">Get running!</button>
         </form>
       </div>
-      <div>
-        /
+      <div class="hero-cta">
         <h2>Start Building Habits.</h2>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta
