--- a/index.html
+++ b/index.html
@@ -34,6 +34,15 @@
 
     <!--hero/jumbotron-->
     <section class="hero">
+      <div class="hero-cta">
+        <h2>Start Building Habits.</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta
+          mollitia, illo numquam, voluptates fugit voluptate labore, impedit
+          debitis maiores illum et sequi quasi possimus? Ut magni architecto
+          voluptates. Aut, sequi.
+        </p>
+      </div>
       <div class="hero-form">
         <h3>Get Started Today</h3>
         <p>
@@ -80,16 +89,6 @@
           </p>
           <button type="submit">Get running!</button>
         </form>
-      </div>
-      <div>
-        /
-        <h2>Start Building Habits.</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta
-          mollitia, illo numquam, voluptates fugit voluptate labore, impedit
-          debitis maiores illum et sequi quasi possimus? Ut magni architecto
-          voluptates. Aut, sequi.
-        </p>
       </div>
     </section>
 
